# myj-fastapi-web-app

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yaml  init.sql  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: test.yml
api/: db.py  main.py  migrate_db.py
api/auth/: core.py  router.py
api/cruds/: done.py  task.py  user.py
api/extra_modules/auth/: core.py  routers.py
api/extra_modules/image/: core.py
api/models/: task.py  user.py
api/routers/: done.py  task.py  user.py
api/schemas/: task.py  user.py
docs/: SATA用prj説明.md  how-to-use-vscode-mysql-plugin.md  install-docker-mac.md  install-docker-windows10.md  install-docker-windows11.md  prj-overview.md
frontend/: index.html  login.html  signup.html  task-create.html  task-detail.html  task-update.html  tesk-create.html
frontend/css/: general.css
frontend/js/: api.js  general.js
script/: add-package.bat  add-package.sh  build-in-container-poetry-env.sh  cleanup_and_insert_mock.py  in-container-poetry.sh  migrate_db.bat  migrate_db.sh  rebuild-api.sh  rebuild-docker.sh  rebuild-frontend.sh
script/sata/: insert_mock.py
tests/: fe_test_playwright_frontend.py  test_e2e.py  utils.py
